Put back log-mark css, improved 404.html

--- a/editor/static/css/editor-other.css
+++ b/editor/static/css/editor-other.css
@@ -72,6 +72,10 @@ tr.over td {
     margin-bottom: 20px;
 }
 
+.log-mark {
+    color: #95C3DB; /* light blue for log page */
+}
+
 #reset {
     width: 220px;
 }
