Editor sort folders before files, CodeMirror log mode

--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -33,6 +33,7 @@
     <script src="/editor/static/codemirror2/mode/htmlmixed/htmlmixed.js"></script>
     <script src="/editor/static/codemirror2/mode/python/python.js"></script>
     <script src="/editor/static/codemirror2/mode/less/less.js"></script>
+    <script src="/editor/static/js/log.js"></script>
 
     <script src="/editor/static/codemirror2/lib/util/searchcursor.js"></script>
     <script src="/editor/static/codemirror2/lib/util/search.js"></script>
