i2c_test support for short write

--- a/public/templates/test-i2c.html
+++ b/public/templates/test-i2c.html
@@ -79,6 +79,10 @@
                                     <input id="size_word" type="radio" name="sizeRadios" value="W" />
                                     Word
                                 </label>
+                                <label class="radio inline">
+                                    <input id="size_short" type="radio" name="sizeRadios" value="C" />
+                                    Short
+                                </label>
                             </div>
                         </div>
                     </div>
