--- a/public/static/css/boilerplate.css
+++ b/public/static/css/boilerplate.css
@@ -20,6 +20,7 @@ a.rascal.red {
     /* color: #9FD4FF; pale blue */
     /* color: #c6433c; logo red - difficult to read */
     color: OrangeRed;
+    /* color: #DC322F; solarized red */
 }
 
 [class^="icon-"],
