--- a/public/templates/motor.html
+++ b/public/templates/motor.html
@@ -3,9 +3,9 @@
 <head>
     <title>Motor control demo</title>
     {% include "include/rascal-head.html" %}
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="http://static.jquery.com/ui/css/demo-docs-theme/ui.theme.css" type="text/css" media="all" />
+    <script src="/static/js/jquery-ui-1.8.16.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/static/css/jquery-ui-1.8.16.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="/static/css/ui.theme-1.8.16.css" type="text/css" media="all" />
 </head>
 <body>
     {% include "include/rascal-topbar.html" %}
