--- a/public/templates/relay.html
+++ b/public/templates/relay.html
@@ -3,29 +3,27 @@
 <head>
     <meta charset="utf-8">
     <title>Relay demo</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <script src="/static/js/jquery-1.7.2.js"></script>
-    <script language="javascript" type="text/javascript" src="/static/js/jquery.jqplot-1.0.0b2.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/css/jquery.jqplot-1.0.0b2.css" />
+    {% include "include/rascal-head.html" %}
 </head>
 <body>
-    <div class="rascalcontent">
-        <h1>Relay demo</h1>
-        <form id="relay-form">
-            <label for="target_state">Toggle relay to charge and discharge capacitor:</label>
-            <select id="target_state">
-                {% if pin == "1" %}
-                <option value="0">Off</option>
-                <option value="1" selected="selected">On</option>
-                {% else %}
-                <option value="0" selected="selected">Off</option>
-                <option value="1">On</option>
-                {% endif %}
-            </select>
-        </form>
-        <div id="chart1" style="height:600px;width:900px;"></div>
+    {% include "include/rascal-topbar.html" %}
+    <div class="container">
+        <div class="well rascal">
+            <h1>Relay demo</h1>
+            <form id="relay-form">
+                <label for="target_state">Toggle relay to charge and discharge capacitor:</label>
+                <select id="target_state">
+                    {% if pin == "1" %}
+                    <option value="0">Off</option>
+                    <option value="1" selected="selected">On</option>
+                    {% else %}
+                    <option value="0" selected="selected">Off</option>
+                    <option value="1">On</option>
+                    {% endif %}
+                </select>
+            </form>
+            <div id="chart1" style="height:600px;width:800px;"></div>
+        </div>
     </div>
     <script language="javascript" type="text/javascript">
     $("#target_state").change(function() {
@@ -38,10 +36,10 @@
             location: "nw" },
         title: "Rascal voltage readings",
         series: [
-            {label: "Channel 0 (relay)", lineWidth:3, showMarker:false},
-            {label: "Channel 1 (capacitor)", lineWidth:3, showMarker:false},
-            {label: "Channel 2", lineWidth:3, showMarker:false},
-            {label: "Channel 3", lineWidth:3, showMarker:false}
+            {label: "Channel A0", lineWidth:3, showMarker:false},
+            {label: "Channel A1", lineWidth:3, showMarker:false},
+            {label: "Channel A2", lineWidth:3, showMarker:false},
+            {label: "Channel A3", lineWidth:3, showMarker:false}
         ],
         axes: {
             xaxis: {
@@ -78,7 +76,7 @@
             a3.push(data.A3);
             $.jqplot("chart1", [a0, a1, a2, a3], chartOptions).replot();
         });
-    }, 200);
+    }, 1000);
     </script>
 </body>
 </html>
