--- a/public/templates/sprinkler.html
+++ b/public/templates/sprinkler.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
-    <link rel="stylesheet" type="text/css" href="/static/css/demo.css">
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <script src="/static/js/jquery-1.7.2.js"></script>
+    <title>Sprinkler demo</title>
+    {% include "include/rascal-head.html" %}
 </head>
 <body>
-    <div class="rascalcontent">
-        <input id="sprinkler-on" type="button" value="ON" class="large red awesome" alt="ON">
-        <input id="sprinkler-off" type="button" value="OFF" class="large red awesome" alt="OFF">
+    {% include "include/rascal-topbar.html" %}
+    <div class="container">
+        <div class="well rascal">
+            <button id="sprinkler-on" value="ON" class="btn primary">ON</button>
+            <button id="sprinkler-off" value="OFF" class="btn primary">OFF</button>
+        </div>
     </div>
     <script language="javascript" type="text/javascript">
     $("#sprinkler-on").click( function() {
