Remove deprecated language tags

--- a/public/templates/analog-graph.html
+++ b/public/templates/analog-graph.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     
-    <script language="javascript" type="text/javascript">
+    <script type="text/javascript">
         
         var chartOptions = {
             legend: {
