--- a/public/templates/motor.html
+++ b/public/templates/motor.html
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <script language="javascript" type="text/javascript">
+    <script type="text/javascript">
         $(function() {
             $( "#slider" ).slider({ min: 0, max: 255 });
         });
