--- a/public/templates/test-spi.html
+++ b/public/templates/test-spi.html
@@ -41,7 +41,7 @@
             </div> <!-- /.span3 -->
         </div> <!-- /.well rascal -->
     </div> <!-- /.container -->
-    <script language="javascript" type="text/javascript">
+    <script type="text/javascript">
     </script>
 </body>
 </html>
