--- a/public/templates/include/rascal-head.html
+++ b/public/templates/include/rascal-head.html
@@ -4,7 +4,7 @@
 
 <script src="/static/js/jquery-1.7.2.js"></script>
 <script src="/static/js/bootstrap-2.0.4.js"></script>
-<script language="javascript" type="text/javascript" src="/static/js/jquery.jqplot-1.0.0b2.js"></script>
+<script type="text/javascript" src="/static/js/jquery.jqplot-1.0.0b2.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/css/jquery.jqplot-1.0.0b2.css" />
 
 <link href="/static/css/boilerplate.css" rel="stylesheet">
