--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
     </div>
-    <script language="javascript" type="text/javascript">
+    <script type="text/javascript">
     // You could add some Javascript between these script tags, if you want.
     // jQuery and jqPlot are already included in the header above.
     </script>
