--- a/public/templates/relay.html
+++ b/public/templates/relay.html
@@ -25,7 +25,7 @@
             <div id="chart1" style="height:600px;width:800px;"></div>
         </div>
     </div>
-    <script language="javascript" type="text/javascript">
+    <script type="text/javascript">
     $("#target_state").change(function() {
         $.post("toggle", "target_state=" + $("#target_state").val());
     });
