--- a/public/templates/test-pins.html
+++ b/public/templates/test-pins.html
@@ -320,7 +320,7 @@
            <div id="status">&nbsp;</div>
         </div>
     </div>
-    <script language="javascript" type="text/javascript">
+    <script type="text/javascript">
 
         $(":button").click( function() {
              // create URL like /pin/2/ON
