--- a/public/templates/thermostat.html
+++ b/public/templates/thermostat.html
@@ -13,7 +13,7 @@
             <div id="chart1" style="height:500px;width:900px;"></div>
         </div>
     </div>
-    <script language="javascript" type="text/javascript">
+    <script type="text/javascript">
 
     chartOptions = {
         legend: {
