--- a/public/static/css/boilerplate.css
+++ b/public/static/css/boilerplate.css
@@ -34,27 +34,21 @@ a, a:hover {
 }
 
 /* topbar */
-.navbar-inner, .footer {
-    background-color: #424242;
-    background-image: -moz-linear-gradient(top, #4A4A4A, #3A3A3A);
-    background-image: -ms-linear-gradient(top, #4A4A4A, #3A3A3A);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4A4A4A), to(#3A3A3A));
-    background-image: -webkit-linear-gradient(top, #4A4A4A, #3A3A3A);
-    background-image: -o-linear-gradient(top, #4A4A4A, #3A3A3A);
-    background-image: linear-gradient(top, #4A4A4A, #3A3A3A);
-    background-repeat: repeat-x;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#4A4A4A', endColorstr='#3A3A3A', GradientType=0);
-    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+.navbar-inverse .navbar-inner, .footer {
+  background-color: #424242;
+  background-image: -moz-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: -ms-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4A4A4A), to(#3A3A3A));
+  background-image: -webkit-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: -o-linear-gradient(top, #4A4A4A, #3A3A3A);
+  background-image: linear-gradient(top, #4A4A4A, #3A3A3A);
+  border-color: #343434;
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#4A4A4A', endColorstr='#3A3A3A', GradientType=0);
 }
 
 .brand.rascal {
     padding-top: 5px;
-    padding-bottom: 10px;
+    padding-bottom: 9px;
 }
 
 .navbar .nav .active > a {
@@ -65,6 +59,7 @@ a, a:hover {
 .well.rascal {
     padding: 20px 60px;
     background-color: #666;
+    border-color: #444;
 }
 
 .btn.rascal {
