jquery v1.8.2, jqplot plugins, more support for documentation, bug fixes

--- a/public/templates/markdown.html
+++ b/public/templates/markdown.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<!-- Default template for rendering Markdown files - do not delete! -->
 <html lang="en">
 <head>
-    <title></title>
+    <title>{{title}}</title>
     {% include "include/rascal-head.html" %}
     <style>
         body {
@@ -18,7 +19,5 @@
             {% endautoescape %}
         </div>
     </div>
-    <script type="text/javascript">
-    </script>
 </body>
 </html>
