--- a/public/templates/thermostat.html
+++ b/public/templates/thermostat.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>Thermostat demo</title>
     {% include "include/rascal-head.html" %}
+    <script type="text/javascript" src="/static/js/jqplot-plugins/jqplot.canvasTextRenderer.min.js"></script>
+    <script type="text/javascript" src="/static/js/jqplot-plugins/jqplot.canvasAxisLabelRenderer.min.js"></script>
 </head>
 <body>
     {% include "include/rascal-topbar.html" %}
     <div class="container">
         <div class="well rascal">
             <h1>DIY thermostat demo</h1>
-            <div id="chart1" style="height:500px;width:900px;"></div>
+            <div id="chart1" style="height:500px;width:820px;"></div>
         </div>
     </div>
     <script type="text/javascript">
@@ -18,8 +20,10 @@
     chartOptions = {
         legend: {
             show: true,
-            location: "se" },
-        title: "Channel 0",
+            location: "se",
+            textColor: "black"
+        },
+        title: "Temperature and heater status",
         series: [
             {label: "Actual temperature", lineWidth:3, showMarker:false},
             {label: "Target temperature", lineWidth:3, showMarker:false},
@@ -28,13 +32,29 @@
         axes: {
             xaxis: {
                 label: "Time [seconds ago]",
+                labelRenderer: $.jqplot.CanvasAxisLabelRenderer,
+                labelOptions: {
+                    textColor: "white"
+                },
                 min: 0,
-                max: 300,
-                pad: 0 },
+                max: 330,
+                pad: 0,
+                tickOptions: {
+                    textColor: "white"
+                },
+            },
             yaxis: {
                 label: "Temperature [F]",
+                labelRenderer: $.jqplot.CanvasAxisLabelRenderer,
+                labelOptions: {
+                    textColor: "white"
+                },
                 min: 60.0,
-                max: 95.0 },
+                max: 95.0,
+                tickOptions: {
+                    textColor: "white"
+                },
+            },
         },
         seriesColors: [ "#414243", "#08C239", "#CD2820" ]
     };
