Improved home page Documentation description

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -41,7 +41,7 @@
                     <div class="well well-small app">
                         <a class="applink" href="/docs/about-docs.md" target="_app">Documentation</a>
                         <p>Rascal has a built-in documentation system based on Markdown, a text-to-HTML
-                            conversion tool that lets you to write in plain text and view it in HTML.
+                            conversion tool that lets you write in plain text and view the document as HTML.
                         </p>
                     </div>
                 </div>
